@@ -57,12 +57,22 @@ namespace MySql.Data.Types
 
 		object IMySqlValue.Value
 		{
-			get { return mValue; }
+			get 
+            {
+                if (mValue == 0 || mValue == 1)
+                    return Convert.ToBoolean(mValue);
+                return mValue; 
+            }
 		}
 
 		Type IMySqlValue.SystemType
 		{
-			get { return typeof(UInt64); }
+			get 
+            {
+                if (mValue == 0 || mValue == 1)
+                    return typeof(Boolean);
+                return typeof(UInt64); 
+            }
 		}
 
 		string IMySqlValue.MySqlTypeName
