@@ -17,6 +17,7 @@ Version 5.1.3 -
   - Fixed problem reported by user where MySqlMembershipProvider.GetUser was attempting to 
     reuse the connection to update a table while a reader was open on it.    
   - Fixed problem with membership schema where the password key column was not large enough  
+  - Added feature where bit columns that have the value 0 or 1 are returned as bool
 
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
